Colaboratory를 통해 생성됨

--- a/python_09_정규표현식.ipynb
+++ b/python_09_정규표현식.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7OSGySglCAelqEEa1/DuY",
+      "authorship_tag": "ABX9TyM4oTbHZC3jGlVwIdjDSzyV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FTaBzj1nKtOH"
       },
@@ -72,7 +72,7 @@
         "id": "s4SkGpwSNMzA",
         "outputId": "420f809a-f4b3-4e76-dc4d-f01fcb1740f6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "yFa377PRLfgI"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "UmV1UlA6Lk0o"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "id": "MIlCQkXgLmsI",
         "outputId": "8cf9abe7-a119-4f6c-bbbc-1ff5f87885b8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "kwv4vpZsLv5p",
         "outputId": "63a63d84-c316-4a70-8d0a-32cf28d871cc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "k3xueWNeMI5e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
         "id": "8DpAzcqZMMhY",
         "outputId": "bb18f803-6a01-4210-b310-7193db4b09e0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "id": "OHtY2RYUMc72",
         "outputId": "9e2d984a-7baf-467a-acab-a109efd8682a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         "id": "fCag1aIwM4MF",
         "outputId": "4b355c60-560f-477c-f227-0bd1e690409e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "4FW8R8gvNBqw",
         "outputId": "eb47c21d-8f52-4de6-9c05-8698c6e60b13"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "id": "rr2xxpmiNR4a",
         "outputId": "80053ab7-1a4f-4ab1-9183-0bd4980595f3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "id": "dW6lZaX7NjLa",
         "outputId": "0f122549-081a-4243-d744-5a954e592bb7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
         "id": "YG3OMt8hOTb9",
         "outputId": "1fa988c6-8b11-4f60-85b5-8142c1e147f5"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "id": "T8K-QnGMPavt",
         "outputId": "e7dbfb22-82c9-4db9-bb5e-a247423e28bc"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "id": "tJkXgGUPPvTP",
         "outputId": "6d7f1ccd-bb79-4a51-eb9e-dc7b09462478"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "id": "1qhLbgBnQ4SV",
         "outputId": "e687dc26-8612-44c5-88d8-bbe19ccd8631"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "id": "pIPqrPxdRaI9",
         "outputId": "46fc6c59-1b5d-434f-b141-3a66620c070c"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +512,7 @@
         "id": "YM5iyKpCSBKW",
         "outputId": "7eb56435-85ea-4f26-95f4-de229a4324af"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,9 +550,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eN4VrIeWScg0",
-        "outputId": "31a2117e-b399-4619-e3b9-357353b070ea"
+        "outputId": "fc0d626c-7e76-45a5-887b-8299cb20828d"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +581,7 @@
         "id": "doTH9jbRTzq8",
         "outputId": "49a8eeb3-a58a-4097-effb-b23c42fe112e"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,22 +607,222 @@
         "python sa\n",
         "python three\"\"\")\n",
         "\n",
-        "print(m)\n"
+        "print(m)\n",
+        "print(dir(m))\n",
+        "print(type(m))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NDrCqWxfUZL7",
-        "outputId": "459d1aab-5381-4122-af83-cca074141292"
+        "outputId": "cafe1f6a-d8e4-4a37-9532-419b4fa99864"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['python one', 'python two', 'python _', 'python 9', 'python s', 'python sa', 'python three']\n"
+            "['python one', 'python two', 'python _', 'python 9', 'python s', 'python sa', 'python three']\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
+            "<class 'list'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### findall vs finditer\n",
+        "\n",
+        "- 일치하는 검색 데이터를 모두 가져온다.\n",
+        "\n",
+        "- findall은 matchers로 리턴하고 캡처된 그룹이 있다면 튜플로 리턴한다.\n",
+        "\n",
+        "- finditer는 Match object로 리턴한다.   \n",
+        "리턴된 오브젝트를 가지고 m.group(1), m.group(2) 이런 식으로 사용할 수 있다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Dwswp4lDMea7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile(\"([0-9]+)([^0-9]*)\")\n",
+        "m = p.findall(\"abxs212350dvkj2akfl0435xksd\")\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bpwdfBilMdbT",
+        "outputId": "79a6e0c0-20be-4e42-df20-43d9584a5741"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('212350', 'dvkj'), ('2', 'akfl'), ('0435', 'xksd')]\n",
+            "<class 'list'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile('&#(0[0-7]+|[0-9]+|x[0-9a-fA-F]+);')\n",
+        "data = '''&#06;\n",
+        "    &#9;\n",
+        "  &#xa;\n",
+        "   '''\n",
+        "m = p.findall(data)\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tGroPtZPOpxt",
+        "outputId": "ab3ab85e-fb96-4a2b-d2b1-d4e3bbcc528a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['06', '9', 'xa']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 부정적 전방 탐색 (?!)"
+      ],
+      "metadata": {
+        "id": "3s5tvBuDQYKa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile(\".*[.](?!bat$|exe$).*$\") \n",
+        "file = ['foo.bar', 'autoexec.bat', 'sednmail.cf']\n",
+        "\n",
+        "for item in file :\n",
+        "  # print(item)\n",
+        "  m = p.search(item)\n",
+        "  # print(m)\n",
+        "  if m :\n",
+        "    print(m)\n",
+        "    print(m.group(), m.start(), m.end())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I_PmjL8eQVUM",
+        "outputId": "79fafc03-b758-4646-9651-4acecc5d5d65"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<re.Match object; span=(0, 7), match='foo.bar'>\n",
+            "foo.bar 0 7\n",
+            "<re.Match object; span=(0, 11), match='sednmail.cf'>\n",
+            "sednmail.cf 0 11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### sub() \n",
+        "\n",
+        "- 문자열 바꾸기"
+      ],
+      "metadata": {
+        "id": "aQrQbga1SHBC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile('(blue|white|red)')\n",
+        "# sub('바꿀 문자열', '대상 문자열')\n",
+        "m = p.sub('color', 'blue socks and red socks')\n",
+        "print(m)\n",
+        "print(type(m))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aZyEUz_WSGDL",
+        "outputId": "51499f6d-7e04-49cb-8138-d0d4571b14ce"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "color socks and color socks\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### subn()\n",
+        "\n",
+        "- sub()와 비슷하나 리턴은 튜플로 한다.\n",
+        "\n",
+        "- 수정된 갯수도 리턴된다."
+      ],
+      "metadata": {
+        "id": "eCLF0jBES2bh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile('(blue|white|red)')\n",
+        "\n",
+        "m = p.subn('color', 'blue socks and red socks')\n",
+        "print(m)\n",
+        "print(type(m))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3DPfPZo8Sy4s",
+        "outputId": "e6c49d60-2f0a-4221-eef0-30e3bce7f881"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('color socks and color socks', 2)\n",
+            "<class 'tuple'>\n"
           ]
         }
       ]
